syntax = "proto3";

package user.v1;

import "user/v1/user.proto";

option go_package = "github.com/Housiadas/backend-system/gen/user/v1";

service UserService {
  rpc GetUserById(GetUserByIdRequest) returns (GetUserByIdResponse) {};
}
